--- a/cCLASS-WORK.html
+++ b/cCLASS-WORK.html
@@ -41,11 +41,12 @@
 
       }
      i{
-      width: 50vh;  
+      width: 10vh;
+      height: 0%;  
 
      }
     button{
-      background-color: rgb(32, 32, 32);
+      background-color: rgb(140, 30, 184);
     
      }
     
@@ -72,6 +73,7 @@
 <button>Strength</button>
 <br>
 <button>Generate<i class="fa fa-arrow-right" aria-hidden="true"></i></button>
+
 
 
 
