--- a/page2.html
+++ b/page2.html
@@ -1,9 +1,37 @@
 <!DOCTYPE html>
-< lang="en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<body>
+    <!-- <video src="/kai-cenat.mp4" width="300" height="600" autoplay  loop controls></video> -->
+    <audio src="/ozeba.mp3" controls></audio>
+
+    <h1>Ordered list</h1>
+    <ol type="A">
+        <li>Cow</li>
+        <li>Camel</li>
+        <li>Pig</li>
+    </ol>
+
+    <h1>Unordered list</h1>
+    <ul>
+        <li>Cow</li>
+        <li>Camel</li>
+        <li>Pig</li>
+    </ul>
+
+    <h1>Descriptive list</h1>
+    <dl>
+        <dt>insect</dt>
+        <dd>Cockcroach</dd>
+        <dt>animal</dt>
+        <dd>Cow</dd>
+        <dt>country</dt>
+        <dd>Nigeria</dd>
+    </dl>
+
 </body>
 </html>
