--- a/CSS/Assignment/nested-list.html
+++ b/CSS/Assignment/nested-list.html
@@ -7,17 +7,17 @@
 </head>
 <body>
     <h1>Nested List</h1>
-    <ol type="I">
+    <ol type="A">
         <li>Background Skills</li>
         <ol type="A">
             <li>Unix Commands</li>
             <li>Vim text editors</li>
         </ol>
-        <li>HTML</li>
-        <ol type="A">
+        <li>HTML</li> b
+        <ol type="1">
             <li>Unix Commands</li>
             <li>Vim text editors</li>
-            <ol type="i">
+            <ol type="A">
                 <li>Unix Commands</li>
                 <li>Vim text editors</li>
             </ol>
